Remove fixed font size (header) on small screens.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -310,7 +310,6 @@ header.masthead {
     padding: 150px 15px 100px;
     text-align: center; }
   header.masthead .header-content .header-content-inner h1 {
-    font-size: 3.5em;
     font-weight: 700;
     margin-top: 0;
     margin-bottom: 0;
